# llm-batch-py

./: .gitignore  Cargo.toml  LICENSE  README.md  RECOVERY_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: batching.md  locking.md  prompt-building.md  prompt-caching.md  provider-configs.md  result-cache.md  s3-cache-storage.md  streaming.md
scripts/: benchmark_runner_perf.py
src/: lib.rs
src/llm_batch_py/: __init__.py  _core_wrapper.py  _py_core.py  catalog.py  jobs.py  pricing.py  prompt_cache.py  prompting.py  runner.py  token_estimation.py
src/llm_batch_py/providers/: __init__.py  anthropic.py  base.py  openai.py
tests/: conftest.py  fakes.py  test_catalog.py  test_core.py  test_prompting.py  test_providers.py  test_runner.py  test_token_estimation.py
